# agentgate

./: README.md  pyproject.toml
agentgate/: __init__.py  cli.py  db.py  gate.py  mcp_server.py  models.py  server.py  tokens.py
agentgate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
agentgate/integrations/: __init__.py  django_adapter.py  openai_wrapper.py
tests/: test_agentgate.py  test_elevation.py  test_mcp.py
